populated plagiarism result in result.html

--- a/public/result.html
+++ b/public/result.html
@@ -4,20 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plagiarism Tool</title>
+    <title>Plagiarism Results</title>
     <link rel="stylesheet" href="result.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="box">
-            <h1>Result</h1>
-            <p id="result"></p>
-        </div>
+        <h1>Plagiarism Results</h1>
+        <canvas id="plagiarism-chart" width="400" height="200"></canvas>
     </div>
 
     <script src="result.js"></script>
- 
 </body>
 
 </html>
